Add PWA support and production deployment config
- Backend: PORT env var for Railway, CORS origins via ALLOWED_ORIGINS env var
- Frontend: VITE_API_URL support in api.js for production backend URL
- PWA: manifest.json, iOS meta tags, apple-touch-icon, 192/512px icons

https://claude.ai/code/session_01DrKuTgtCtSq5km1JPT8RjP